# VeriCite

./: .gitignore  DesignSpecification.md  LICENSE  README.md  pyproject.toml  requirements.txt  开源闭源策略.md
.trae/documents/: plan_20260205_125351.md
tests/: generate_pdf.py
tests/fixtures/: test_citations.txt
vericite/: __init__.py  cli.py
vericite/core/: slicer.py  validator.py
vericite/core/ocr/: cloud.py  engine.py  local.py
